<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    tools:context=".presentation.ui.fragment.sign.register.FirstRegisterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_layout_half_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_first_gl_top"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/register_text"
            android:textColor="@color/colorDefault"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/register_first_gl_left"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_school_number_edit"
            style="@style/SignEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:drawableStart="@drawable/register_focused"
            android:drawableLeft="@drawable/register_focused"
            android:drawablePadding="16dp"
            android:hint="@string/register_school_number_hint"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp"
            android:theme="@style/SignEditTextStyle"
            app:layout_constraintEnd_toStartOf="@+id/register_first_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_first_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/register_title_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:drawableStart="@drawable/register_focused"
            android:drawableLeft="@drawable/register_focused"
            android:drawablePadding="16dp"
            android:hint="@string/register_name_hint"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:theme="@style/SignEditTextStyle"
            app:layout_constraintEnd_toStartOf="@+id/register_first_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_first_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/register_school_number_edit" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_first_next_btn"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/register_first_gl_bottom"
            app:layout_constraintEnd_toStartOf="@+id/register_first_gl_right"
            app:layout_constraintStart_toStartOf="@+id/register_first_gl_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_first_gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_first_gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_first_gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_first_gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>