<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.dialog.ApplyEquipmentDetailDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/apply_equipment_detail_card"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/apply_equipment_detail_close_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apply_equipment_detail_name_layout"
                style="@style/MyDenseOutlined"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="56dp"
                android:layout_marginRight="24dp"
                android:hint="@string/equipment_name_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apply_equipment_detail_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_link_layout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apply_equipment_detail_link_layout"
                style="@style/MyDenseOutlined"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/equipment_link_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apply_equipment_detail_link_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_name_layout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apply_equipment_detail_price_layout"
                style="@style/MyDenseOutlined"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/equipment_price_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_link_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apply_equipment_detail_price_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_name_layout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apply_equipment_detail_amount_layout"
                style="@style/MyDenseOutlined"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/equipment_amount_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/apply_equipment_detail_price_layout"
                app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_link_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apply_equipment_detail_amount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_name_layout" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apply_equipment_detail_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/notosanscjkkrregular"
                android:background="@color/colorWhite"
                android:text="@string/equipment_apply_text"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply_equipment_detail_price_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>